--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -52,10 +52,10 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="17dp"
+        android:layout_marginHorizontal="32dp"
         android:layout_marginTop="9dp"
         app:hintAnimationEnabled="false"
-        app:cursorColor="@color/real_black"
+        app:cursorColor="@color/black"
         app:hintEnabled="false"
         app:layout_constraintTop_toBottomOf="@id/email">
 
@@ -63,7 +63,7 @@
             android:id="@+id/email_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/name_bg"
+            android:background="@drawable/textinput_bg"
             android:hint="Enter Email Address"
             android:inputType="textEmailAddress"
             android:textColor="@color/black"
@@ -89,12 +89,10 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="17dp"
+        android:layout_marginHorizontal="32dp"
         android:layout_marginTop="9dp"
-        app:endIconMode="password_toggle"
-        app:endIconTint="#3F4045"
         app:hintAnimationEnabled="false"
-        app:cursorColor="@color/real_black"
+        app:cursorColor="@color/black"
         app:hintEnabled="false"
         app:layout_constraintTop_toBottomOf="@id/password">
 
@@ -103,7 +101,7 @@
             android:id="@+id/password_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/name_bg"
+            android:background="@drawable/textinput_bg"
             android:hint="*********"
             android:inputType="text"
             android:textColor="@color/black"
@@ -112,33 +110,16 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Forgot Password"
-        android:textColor="@color/black"
-        android:fontFamily="@font/poppins_regular"
-        android:layout_marginEnd="7dp"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/forgetPsw"
-        app:layout_constraintEnd_toStartOf="@+id/forgetPsw"
-        app:layout_constraintTop_toTopOf="@+id/forgetPsw"
-        android:layout_marginRight="7dp" />
-
-    <TextView
         android:id="@+id/forgetPsw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:textColor="@color/green"
         android:fontFamily="@font/poppins_regular"
-        android:layout_marginEnd="7dp"
+        android:text="Forgot Password"
+        android:textColor="#0060F0"
         android:textSize="14sp"
-        android:text="Click Here"
-        app:layout_constraintEnd_toEndOf="@+id/psw"
-        app:layout_constraintTop_toBottomOf="@+id/psw"
-        android:layout_marginRight="7dp" />
-
+        android:layout_marginTop="12dp"
+        app:layout_constraintTop_toBottomOf="@id/psw"
+        app:layout_constraintEnd_toEndOf="@+id/psw"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/getStarted"
