--- a/app/src/main/res/layout/fragment_users_info.xml
+++ b/app/src/main/res/layout/fragment_users_info.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.SignUpFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".fragment.UsersInfo">
+
 
 
             <ImageView
                 android:id="@+id/imageView5"
                 android:layout_width="250dp"
                 android:layout_height="30dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="12dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -23,74 +25,45 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="22dp"
                 android:fontFamily="@font/poppins_medium"
-                android:text="Sign Up"
+                android:text="Lets Know You"
                 android:textColor="@color/black"
                 android:textSize="32sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/email"
                 app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="17dp"
-                android:layout_marginEnd="73dp"
-                android:fontFamily="@font/poppins_medium"
-                android:text="Have an account?"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
+    <TextView
+        android:id="@+id/email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:fontFamily="@font/poppins_medium"
+        android:text="UserName"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@+id/userName_"
+        app:layout_constraintTop_toBottomOf="@id/userImage" />
 
-            <TextView
-                android:id="@+id/login"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:fontFamily="@font/poppins_medium"
-                android:text="Login"
-                android:textColor="#0060F0"
-                android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="@+id/textView6"
-                app:layout_constraintStart_toEndOf="@+id/textView6"
-                app:layout_constraintTop_toTopOf="@+id/textView6" />
-
-
-            <TextView
-                android:id="@+id/email"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="22dp"
-                android:fontFamily="@font/poppins_medium"
-                android:text="Email Address"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="@+id/emailAddress"
-                app:layout_constraintTop_toBottomOf="@id/login" />
 
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/emailAddress"
+                android:id="@+id/userName_"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="32dp"
                 android:layout_marginTop="12dp"
-                app:cursorColor="@color/black"
                 app:hintAnimationEnabled="false"
+                app:cursorColor="@color/black"
                 app:hintEnabled="false"
                 app:layout_constraintTop_toBottomOf="@id/email">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/email_et"
+                    android:id="@+id/userNmae_et"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/textinput_bg"
-                    android:hint="Enter Email Address"
-                    android:inputType="textEmailAddress"
+                    android:hint="UserName"
                     android:textColor="@color/black"
                     android:textColorHint="#3F4045"
                     android:textSize="12sp" />
@@ -103,11 +76,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="22dp"
                 android:fontFamily="@font/poppins_medium"
-                android:text="Password"
+                android:text="Phone Nummber"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/email"
-                app:layout_constraintTop_toBottomOf="@id/emailAddress" />
+                app:layout_constraintTop_toBottomOf="@id/userName_" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/psw"
@@ -116,8 +89,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="32dp"
                 android:layout_marginTop="12dp"
-                app:cursorColor="@color/black"
                 app:hintAnimationEnabled="false"
+                app:cursorColor="@color/black"
                 app:hintEnabled="false"
                 app:layout_constraintTop_toBottomOf="@id/password">
 
@@ -127,8 +100,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/textinput_bg"
-                    android:hint="*********"
-                    android:inputType="text"
+                    android:hint="08052187724"
+                    android:inputType="number"
                     android:textColor="@color/black"
                     android:textColorHint="#3F4045"
                     android:textSize="12sp" />
@@ -138,25 +111,25 @@
                 android:id="@+id/forgetPsw"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
                 android:fontFamily="@font/poppins_medium"
                 android:text="Forgot Password"
                 android:textColor="#0060F0"
-                android:textSize="14sp"
                 android:visibility="invisible"
-                app:layout_constraintEnd_toEndOf="@+id/psw"
-                app:layout_constraintTop_toBottomOf="@id/psw" />
+                android:textSize="14sp"
+                android:layout_marginTop="12dp"
+                app:layout_constraintTop_toBottomOf="@id/psw"
+                app:layout_constraintEnd_toEndOf="@+id/psw"/>
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/getStarted"
+                android:id="@+id/login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="32dp"
+                android:layout_marginHorizontal="22dp"
                 android:layout_marginTop="22dp"
+                android:textAllCaps="false"
                 android:background="@drawable/btnsignup"
                 android:fontFamily="@font/poppins_medium"
-                android:text="Create Account"
-                android:textAllCaps="false"
+                android:text="Continue"
                 android:textColor="@color/white"
                 android:textSize="14sp"
                 app:layout_constraintTop_toBottomOf="@+id/forgetPsw" />
@@ -166,15 +139,25 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
                 android:layout_marginTop="32dp"
+                android:textAllCaps="false"
+                android:visibility="invisible"
                 android:background="@drawable/btnsignup"
                 android:fontFamily="@font/poppins_medium"
                 android:text="LogIn"
-                android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="14sp"
-                android:visibility="invisible"
-                app:layout_constraintTop_toBottomOf="@+id/getStarted" />
+                app:layout_constraintTop_toBottomOf="@+id/login" />
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/userImage"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:civ_border_color="@color/black"
+        app:civ_border_width="1dp"
+        android:src="@drawable/imageuser"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
