--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -43,6 +43,9 @@
         <action
             android:id="@+id/action_loginFragment_to_signUpFragment"
             app:destination="@id/signUpFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_forgetPassword"
+            app:destination="@id/forgetPassword" />
     </fragment>
     <fragment
         android:id="@+id/signUpFragment"
@@ -52,5 +55,18 @@
         <action
             android:id="@+id/action_signUpFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_signUpFragment_to_usersInfo"
+            app:destination="@id/usersInfo" />
     </fragment>
+    <fragment
+        android:id="@+id/forgetPassword"
+        android:name="com.dash.rigour.fragment.ForgetPassword"
+        android:label="fragment_forget_password"
+        tools:layout="@layout/fragment_forget_password" />
+    <fragment
+        android:id="@+id/usersInfo"
+        android:name="com.dash.rigour.fragment.UsersInfo"
+        android:label="fragment_users_info"
+        tools:layout="@layout/fragment_users_info" />
 </navigation>
