--- a/app/src/main/res/layout/fragment_users_info.xml
+++ b/app/src/main/res/layout/fragment_users_info.xml
@@ -121,7 +121,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/psw"/>
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/login"
+                android:id="@+id/BtnContinue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
@@ -146,7 +146,7 @@
                 android:text="LogIn"
                 android:textColor="@color/white"
                 android:textSize="14sp"
-                app:layout_constraintTop_toBottomOf="@+id/login" />
+                app:layout_constraintTop_toBottomOf="@+id/BtnContinue" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/userImage"
