--- a/app/src/main/res/layout/fragment_first_frame.xml
+++ b/app/src/main/res/layout/fragment_first_frame.xml
@@ -12,8 +12,8 @@
         android:id="@+id/imageView3"
         android:layout_width="279dp"
         android:layout_height="379dp"
-        android:src="@drawable/imageone"
-        android:layout_marginTop="12dp"
+        android:src="@drawable/userimage"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/first_introduction"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="22dp"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="@color/brand_color"
@@ -36,7 +36,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="22dp"
         android:text="@string/first_text"
         android:textSize="14sp"
         android:textAlignment="center"
