--- a/app/src/main/res/drawable/bg.xml
+++ b/app/src/main/res/drawable/bg.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#0AC2C2"/>
+    <solid android:color="@color/white"/>
 
 
 
-
+<corners android:radius="5dp"/>
 
 
 
