--- a/app/src/main/res/drawable/btnlogin.xml
+++ b/app/src/main/res/drawable/btnlogin.xml
@@ -6,6 +6,6 @@
         android:width="1dp"
         android:color="@color/brand_color" />
     <corners android:radius="10dp" />
-
+<solid android:color="@color/white"/>
 
 </shape>
