--- a/app/src/main/res/drawable/textinput_bg.xml
+++ b/app/src/main/res/drawable/textinput_bg.xml
@@ -3,10 +3,11 @@
     android:shape="rectangle">
 
 
-    <corners android:radius="12dp" />
+    <corners android:radius="7dp" />
     <stroke
         android:width="1dp"
-        android:color="#26000000" />
+        android:color="@color/black" />
 
+    <solid android:color="@color/white"/>
 
 </shape>
