--- a/app/src/main/res/layout/fragment_add_projects.xml
+++ b/app/src/main/res/layout/fragment_add_projects.xml
@@ -47,6 +47,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="17dp"
+        app:cardElevation="0dp"
+        app:cardCornerRadius="12dp"
         app:cardBackgroundColor="#66D9D9D9"
         app:layout_constraintTop_toBottomOf="@id/arrowBack">
 
@@ -58,8 +60,26 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_medium"
                 android:text="Project Type"
+                android:textColor="#035E5E"
+                android:layout_marginTop="12dp"
+                android:layout_marginStart="7dp"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="262dp"
+                android:layout_height="wrap_content"
+                tools:layout_editor_absoluteX="84dp"
+                tools:layout_editor_absoluteY="18dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="hint" />
+            </com.google.android.material.textfield.TextInputLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
