--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -106,95 +106,32 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                app:cardCornerRadius="12dp"
-                app:layout_constraintEnd_toStartOf="@id/card2"
+
+            <com.makeramen.roundedimageview.RoundedImageView
+                android:id="@+id/image1"
+                android:layout_width="260dp"
+                android:layout_height="150dp"
+                android:src="@drawable/electrician"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/userimage">
-
-
-                    <ImageView
-                        android:layout_width="270dp"
-                        android:layout_height="130dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-            </androidx.cardview.widget.CardView>
-
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                app:cardCornerRadius="12dp"
-                app:layout_constraintEnd_toStartOf="@id/card3"
-                app:layout_constraintStart_toEndOf="@+id/card1"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/userimage">
-
-
-                    <ImageView
-                        android:layout_width="270dp"
-                        android:layout_height="130dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-            </androidx.cardview.widget.CardView>
-
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                app:cardCornerRadius="12dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/card2"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/userimage">
-
-
-                    <ImageView
-                        android:layout_width="250dp"
-                        android:layout_height="130dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-            </androidx.cardview.widget.CardView>
-
+                app:layout_constraintTop_toTopOf="parent"
+                app:riv_corner_radius="12dp" />
+            <com.makeramen.roundedimageview.RoundedImageView
+                android:id="@+id/image2"
+                android:layout_width="260dp"
+                android:layout_height="150dp"
+                android:src="@drawable/welder"
+                app:layout_constraintStart_toEndOf="@id/image1"
+                app:layout_constraintTop_toTopOf="parent"
+                app:riv_corner_radius="12dp" />
+            <com.makeramen.roundedimageview.RoundedImageView
+                android:layout_width="260dp"
+                android:layout_height="150dp"
+                android:src="@drawable/plumber"
+                app:layout_constraintStart_toEndOf="@id/image1"
+                app:layout_constraintTop_toTopOf="parent"
+                app:riv_corner_radius="12dp" />
+            
+            
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </HorizontalScrollView>
